fix: use flex gap, rm flex-float ie11 thing

--- a/src/views/_proxied-dot-io/product-docs-landing/components/featured-card/style.module.css
+++ b/src/views/_proxied-dot-io/product-docs-landing/components/featured-card/style.module.css
@@ -29,6 +29,9 @@
 }
 
 .ctas {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
   margin-top: 24px;
 }
 
