--- a/src/views/_proxied-dot-io/product-docs-landing/components/use-case-card/style.module.css
+++ b/src/views/_proxied-dot-io/product-docs-landing/components/use-case-card/style.module.css
@@ -8,6 +8,9 @@
 }
 
 .ctas {
-  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
   margin-bottom: 8px;
+  margin-top: 16px;
 }
